syntax = "proto3";

package pb;

import "profile.proto";

option go_package = "github.com/kyamalabs/users/pb";

message UpdateProfileRequest {
  string wallet_address = 1;
  string gamer_tag = 2;
}

message UpdateProfileResponse {
  Profile profile = 1;
}
